test/tests/BadAnnotations4.frost
class Test {
    @private
    @protected
    @package
    @class
    @override
    @external
    @implicit
    @abstract
    @inline
    @specialize
    @weak
    @unsafeImmutable
    def x:MutableString

    @class
    var y:String
}
